[project]
name = "assistant-agent"
version = "0.1.0"
description = "A LangGraph-based multi-agent personal assistant with Human-in-the-Loop and SQLite persistence."
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.15",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.22",
    "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
